--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,3 @@
 {
-  "cSpell.words": [
-    "aclues",
-    "cluebar",
-    "darkred",
-    "dclues",
-    "minmax",
-    "topleft"
-  ]
+  "cSpell.words": ["aclues", "cluebar", "darkred", "dclues", "minmax", "topleft"]
 }
