Prevent long clues from breaking UI
Fixes broken text width in 47-down in:
https://xw.carlwa.com/?id=uBBby9lz87Yzcf2wfjD2

"What_the_underlines_in_this_clue_show" clue is so long the word doesn't overflow vertically, so it wasn't resized smaller.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-  "cSpell.words": ["aclues", "cluebar", "darkred", "dclues", "minmax", "topleft"]
+  "cSpell.words": [
+    "aclues",
+    "cluebar",
+    "darkred",
+    "dclues",
+    "minmax",
+    "topleft"
+  ],
+  "git.branchProtection": [
+    ""
+  ]
 }
